exports[`ImmutableVirtualizedList renders basic List 1`] = `
<RCTScrollView>
  <View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        \"lists\"
      </Text>
    </View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        \"are\"
      </Text>
    </View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        \"great\"
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`ImmutableVirtualizedList renders basic Range 1`] = `
<RCTScrollView>
  <View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        3
      </Text>
    </View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        6
      </Text>
    </View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        9
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`ImmutableVirtualizedList renders nested List 1`] = `
<RCTScrollView>
  <View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        [\"so\",\"are\"]
      </Text>
    </View>
    <View
      onLayout={[Function]}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        [\"nested\",\"lists\"]
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`ImmutableVirtualizedList renders with empty data 1`] = `
<RCTScrollView>
  <View />
</RCTScrollView>
`;
